[tool.poetry]
name = "toml_resume"
version = "0.1.0"
description = "Resume from TOML"
authors = ["Michael Bilow <michael.k.bilow@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^4.4.0"
fire = "^0.4.0"
invoke = "^1.6.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
